<resources>
    <string name="app_name">Device Information</string>
    <string name="button_hardware_inforation">Show Device Info hardware</string>
    <string name="button_software_inforation">Show Device Info software</string>
    <string name="device_name">Device name</string>
    <string name="device_vendor">Manufacture</string>
    <string name="cpu">CPU</string>
    <string name="memory_ram">RAM SIZE</string>
    <string name="memory_rom">STORAGE SIZE</string>
    <string name="camera_back">MAIN CAMERA</string>
    <string name="camera_front">SELFIE CAMERA</string>
    <string name="chipset">Chipset</string>
    <string name="network">NETWORK Technology</string>
    <string name="battery">BATTERY</string>
    <string name="DISPLAY">Display</string>
    <string name="Type">Type</string>
    <string name="android_version">Android Version</string>
    <string name="android_security_patch_level">Android Security Patch Level</string>
    <string name="baseband_version">Baseband Version</string>
    <string name="builder_numbre">Builder Numbre</string>
    <string name="kernel_version">Kernel Version</string>
    <string name="dialog_fire_missiles">Error Internet</string>
    <string name="alert_message_dialog">please check Internet \n this app need internet for getting information \nabout your phone</string>
    <string name="fire">refresh</string>
    <string name="cancel">exit</string>
    <string name="tab_text_1">Hardware</string>
    <string name="tab_text_2">Software</string>
    <string name="comming_soon">coming soon</string>
    <string name="facebook_app_id" translatable="false">890793821280061</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb[890793821280061]</string>
    <string name="unknown">unknown</string>


</resources>
